[package]
name = "sandwaterparticle"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.28"
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.30.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = {version = "0.3.81", features = ["Element", "Window" ,"Document"]}
wgpu = { version = "27.0.1", features = ["webgl"] }
